try docs publish dir

--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@ title: Eamon's Blog
 defaultContentLanguage: en  # en/zh/...
 footnoteReturnLinkContents: ↩
 hasCJKLanguage: true
+publishDir: docs
 paginate: 7
 enableEmoji: true
 PygmentsCodeFences: false
