--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://https://lylyalong.github.io/eamontech/
+baseURL: https://lylyalong.github.io/eamontech/
 theme: pure
 title: Eamon's Blog
 defaultContentLanguage: en  # en/zh/...
