--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 baseURL: https://lylyalong.github.io/eamontech/
 theme: pure
 title: Eamon's Blog
-defaultContentLanguage: zh  # en/zh/...
+defaultContentLanguage: zn  # en/zh/...
 footnoteReturnLinkContents: ↩
 hasCJKLanguage: true
 publishDir: docs
@@ -35,31 +35,31 @@ menu:
   main:
     - identifier: home
       name: Home
-      title: Home
+      title: 首页
       url: /
       weight: 1
 
     - identifier: archives
       name: Archives
-      title: Archives
+      title: 归档
       url: /posts/
       weight: 2
 
     - identifier: categories
       name: Categories
-      title: Categories
+      title: 分类
       url: /categories/
       weight: 3
 
     - identifier: tags
       name: Tags
-      title: Tags
+      title: 标签
       url: /tags/
       weight: 4
 
     - identifier: about
       name: About
-      title: About
+      title: 关于
       url: /about/
       weight: 5
 
